* irc: use current channel and current server channels first in completions
  "irc_server_channels" and "irc_channels" (task #12923, issue #392)
* irc: add support of "cap-notify" capability (issue #182, issue #477)
* irc: add command /cap (issue #8)
* irc: add hex dump of messages in raw buffer when debug is enabled for irc
  plugin (level 2 or more)
* logger: display system error when the log file can not be written
  (issue #541)
* script: add option script.scripts.download_timeout
* doc: add Czech man page and quickstart guide (issue #490)
* build: add scripts version.sh and build-debian.sh, separate stable from devel
  Debian packaging

=== Bugs fixed

* core: don't complain any more about "tmux" and "tmux-256color" $TERM values
  when WeeChat is running under tmux (issue #519)
* core: fix truncated messages after a word with a length of zero on screen
  (for example a zero width space: U+200B) (bug #40985, issue #502)
* api: fix handle of invalid escape in function string_convert_escaped_chars()
* irc: fix charset decoding in incoming private messages (issue #520)
* irc: display the arrow before server name in raw buffer
* irc: fix display of messages sent to server in raw buffer
* irc: fix display of invalid UTF-8 chars in raw buffer
* relay: display the arrow before client id and protocol in raw buffer
* ruby: fix load of scripts requiring "uri" (issue #433)
* ruby: fix Ruby detection when pkg-config is not installed

== Version 1.3 (2015-08-16)

=== New features

* core: add completion "colors" (issue #481)
* core: start/stop search in buffer at current scroll position by default,
  add key key[ctrl-q] to stop search and reset scroll (issue #76, issue #393)
* core: add option weechat.look.key_grab_delay to set the default delay when
  grabbing a key with key[alt-k]
* core: add option weechat.look.confirm_upgrade (issue #463)
* core: allow key[ctrl-c] to exit WeeChat when the passphrase is asked on
  startup (issue #452)