@@ -32,6 +32,7 @@ https://weechat.org/files/releasenotes/ReleaseNotes-devel.html[release notes]
 * irc: add command /cap (issue #8)
 * irc: add hex dump of messages in raw buffer when debug is enabled for irc
   plugin (level 2 or more)
+* irc: make command characters optional in server's command option
 * logger: display system error when the log file can not be written
   (issue #541)
 * script: add option script.scripts.download_timeout
